--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- pkgdown -->
     <link href="pkgdown.css" rel="stylesheet" />
     <script src="pkgdown.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"</script></script>
     <script src="https://unpkg.com/vuex"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
