remove registration page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <link href="pkgdown.css" rel="stylesheet" />
     <script src="pkgdown.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vue-router/dist/vue-router.js"</script></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vuex"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
@@ -115,8 +115,8 @@
     <![endif]-->
   </head>
   <body data-spy="scroll" data-target="#toc">  
-    <div id="app">
-    <v-app>
+    <div >
+	    <!--    <v-app>-->
       <div class="container template-home">        
         <header>            
           <div class="navbar navbar-default navbar-fixed-top" role="navigation">           
@@ -195,7 +195,7 @@
           <!--/.navbar -->
         </header>      
         <div class="row">
-          <Registration element-to-hide="navbuttons"></Registration>
+		<!--          <Registration element-to-hide="navbuttons"></Registration>-->
           <div class="contents col-md-9">
             <div id="faust" class="section level1">
               <div class="page-header">
@@ -382,10 +382,10 @@
           </div>
         </footer>  
     </div>
-  </v-app>
+    <!--  </v-app>-->
   </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script> -->
-    <script src="registration.js"></script>
+    <!--    <script src="registration.js"></script> -->
 
     
   </body>
